# Apix

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  globals.css  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/app/: App.tsx  globals.css  main.tsx
src/components/: Alert.tsx  AlertContainer.tsx  CodeEditor.tsx  HTTP.tsx  Header.tsx  HttpPanel.tsx  ResponseViewer.tsx  Settings.tsx  SettingsModal.tsx  WebSocketPanel.tsx  WindowControls.tsx  http-request-panel.tsx  request-panel.tsx  response-panel.tsx  save-request-modal.tsx  sidebar.tsx  websocket-panel.tsx
src/components/client/: Config.tsx  Dropdown.tsx
src/components/collections/: CollectionItem.tsx
src/components/icons/: Icons.tsx
src/components/page/: Client.tsx  Header.tsx  Ouput.tsx
src/components/sections/: Collections.tsx  Header.tsx  Request.tsx  Response.tsx
src/components/ui/: Alert.tsx  TextEditor.tsx  Theme.tsx  alert-dialog.tsx  badge.tsx  button.tsx  calendar.tsx  carousel.tsx  command.tsx  context-menu.tsx  dropdown-menu.tsx  form.tsx  input.tsx  label.tsx  pagination.tsx  select.tsx  sidebar.tsx  slider.tsx  switch.tsx  textarea.tsx  toaster.tsx  toggle-group.tsx  tooltip.tsx  use-toast.ts
src/contexts/: AlertContext.tsx  ApiContext.tsx  AppContext.tsx  ThemeContext.tsx  useWindow.tsx
src/hooks/: use-toast.ts  useAPI.ts  useRequest.tsx  useTheme.tsx
src/types/: index.d.ts  index.ts
src/utils/: syntax-highlighter.tsx
