[package]
name = "apix"
version = "1.0.0-beta-1"
description = "http client fast, simple and better than postman"
authors = ["devluizk"]
edition = "2021"

[lib]
name = "apix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

